Fix alignment bug

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -178,6 +178,10 @@ footer {
     }
   }
 
+  .resume-container {
+    flex-direction: column;
+  }
+
   section {
     margin-bottom: auto;
   }
